[package]
name = "cratuity"
version = "0.1.4"
authors = ["Ben Mayoras <ben.mayoras@gmail.com>"]
edition = "2018"
description = "A tui for searching crates.io"
repository = "https://github.com/TheMayoras/cratuity"
license = "GPL-3.0-or-later"
keywords = ["tui", "crates-io", "search", "terminal"]
exclude = ["assets/*"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = { version = "0.5.0", optional = true }

reqwest = { version = "0.10.10", features = ["blocking", "json"] }

crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }

serde = { version = "1.0.118", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }

structopt = "0.3.21"

comfy-table = "2.1.0"

[features]
default = ["clipboard"]

no-copy = []

