[package]
name = "cratuity"
version = "0.1.5"
authors = ["Ben Mayoras <ben.mayoras@gmail.com>"]
edition = "2021"
description = "A tui for searching crates.io"
repository = "https://github.com/TheMayoras/cratuity"
license = "GPL-3.0-or-later"
keywords = ["tui", "crates-io", "search", "terminal"]
exclude = ["assets/*"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = { version = "0.5", optional = true }
reqwest = { version = "0.10", features = ["blocking", "json"] }
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
comfy-table = "2.1"
open = { version = "2.0", optional = true }

[features]
copy = ["clipboard"]
browser = ["open"]
